# Automated-URL-File-Downloader-Agent

./: .env.example  .gitignore  README.md  Welcome file.md  get_google_token.py  pyproject.toml
src/url_downloader_agent/: __init__.py  agent.py  config.py  downloaders.py  file_store.py  main.py  models.py  router.py  url_extractor.py
src/url_downloader_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
